# mealstack_api

./: README.md  dockerfile  pyproject.toml  tox.ini
.circleci/: config.yml
auto_meal_planning/: dinnerlymealscrape.py  ga.py
tests/: test_auto_meal_planning.py
