[tool.poetry]
name = "auto_meal_planning"
version = "0.1.0"
description = ""
authors = ["Drew Wicke <drewwicke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = {extras = ["jupyter"], version = "^21.7b0"}
deap = "^1.3.1"
html2text = "^2020.1.16"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"
numpy = "^1.21.2"
tox = "^3.24.3"
pandas = "^1.3.2"
requests = "^2.26.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
